src/app/globals.css
:root {
  --max-width: 1100px;
  --border-radius: 12px;

  /* Default color palette for light theme */
  --moss-green: #898952;
  --ivory: #f5fbef;
  --licorice: #13070c;
  --chinese-violet: #6d5676;
  --melon: #f0a8a9;

  /* Default color palette for dark theme */
  --sage: #b0af89;
  --ivory: #f5fbef;
  --davy-grey: #585154;
  --rose-quartz: #9c8ba2;
  --tea-rose: #f7c5c5;

  --color-primary: var(--chinese-violet);
  --color-secondary: var(--moss-green);
  --color-accent: var(--melon);

  --color-background: var(--ivory);
  --color-text: var(--licorice);

  /* Main Easing functions */
  --ease-out-back: cubic-bezier(0.34, 1.56, 0.64, 1);
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-primary: var(--sage);
    --color-secondary: var(--ivory);
    --color-accent: var(--tea-rose);

    --color-background: var(--licorice);
    --color-text: var(--ivory)
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

html {
  scroll-behavior: smooth;
}

body {
  margin-inline: auto;
  width: 1440px;
}

a {
  color: inherit;
  text-decoration: none;
}

img {
  max-height: 100%;
  max-width: 100%;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

